--- a/app.json
+++ b/app.json
@@ -8,16 +8,16 @@
   "env": {
     "SESSION_NAME": {
       "description": "Pyrogram String Session of assistant account. Get Here https://replit.com/@Rishbro/CatXGirl-Music-String-Session?v=1",
-      "required": true
+      "required": true,
     },
     "BOT_TOKEN": {
       "description": "Get this value from @BotFather on TG",
-      "required": true
+      "required": true,
     },
     "BOT_NAME": {
       "description": "A name for your MusicPlayer Bot",
       "required": false,
-      "value": ""
+      
     },
     "BOT_USERNAME": {
       "description": "Username of your bot without @",
@@ -26,21 +26,21 @@
     },
     "API_ID": {
       "description": "Get this value from my.telegram.org/apps",
-      "required": false
+      "required": false,
     },
     "API_HASH": {
       "description": "Get this value from from my.telegram.org/apps",
-      "required": false
+      "required": false,
     },
     "OWNER_USERNAME": {
       "description": "Username of the person who will known as owner of the bot, without @",
       "required": false,
-      "value": "anonymous_was_bot"
+      "value": "ImRishmika"
     },
     "SUPPORT_GROUP": {
       "description": "Username of the group where users will go and disturb you, without @",
       "required": false,
-      "value": "DevilsHeavenMF"
+      "value": "CatXGilrSupport"
     },
     "SUDO_USERS": {
       "description": "User IDs of the users who will counted as admin everywhere (if more than one separate them by space).",
@@ -49,11 +49,11 @@
     },
     "START_IMG": {
       "description": "Telegraph link of the pic which you want to set as the start pic of your bot",
-      "required": false
+      "required": false,
     },
     "PING_IMG": {
       "description": "Telegraph link of the pic which you want to set as the ping pic of your bot",
-      "required": false
+      "required": false,
     },
     "PMPERMIT": {
       "description": "If you want to notify users who pm to assistant account that it's the assistant account of your bot so don't spam messages there (ENABLE/DISABLE).",
