--- a/app.json
+++ b/app.json
@@ -6,91 +6,87 @@
   "repository": "https://github.com/RishBropromax/Cat-X-Girl-Music",
   "stack": "container",
   "env": {
-    "SESSION_NAME": {
-      "description": "Pyrogram String Session of assistant account. Get Here https://replit.com/@Rishbro/CatXGirl-Music-String-Session?v=1",
-      "required": true,
+      "API_ID": {
+        "description": "Get this value from https://my.telegram.org",
+        "value": "",
+        "required": true
+      },
+      "API_HASH": {
+        "description": "Get this value from https://my.telegram.org",
+        "value": "",
+        "required": true
+      },
+      "AUTO_LEAVING_ASSISTANT": {
+        "description": "If you want your assistant to leave all chats automatically after some time.",
+        "value": "True",
+        "required": false
+      },
+      "BOT_TOKEN": {
+        "description": "A Bot's token from Botfather",
+        "value": "",
+        "required": true
+      },
+      "MONGO_DB_URI": {
+        "description": "Get a mongodb url from https://cloud.mongodb.com . You can leave it blank if you want , bot will use CatXGirl database for you",
+        "value": "",
+        "required": true
+      },
+      "MUSIC_BOT_NAME": {
+        "description": "A name for your Music Bot. Please don't use ascii characters",
+        "value": "",
+        "required": true
+      },
+      "OWNER_ID": {
+        "description": "The user id(s) of user(s) whom you would like to add as a OWNER. Multiple values shall be seperated with a space.",
+        "value": "",
+        "required": true
+      },
+      "STRING_SESSION": {
+        "description": "A Pyrogram String Session. One Assistant is Compulsory.  Get From Here (https://replit.com/@ImRishmika/CatXGirl-Music-String-Session?v=1)",
+        "value": "",
+        "required": true
+      },
+      "HEROKU_API_KEY": {
+        "description": "Your Heroku account's API key",
+        "value": "",
+        "required": false
+      },
+      "HEROKU_APP_NAME": {
+        "description": "Your heroku app/bot's name",
+        "value": "cat-girl-bot-2023",
+        "required": false
+      },
+      "LOG_GROUP_ID": {
+        "description": "Your Log Group ID, add your bot and promote as an admin with full rights!. Use only Group. Please don't use Channel ID.",
+        "value": "",
+        "required": true
+      },
+      "UPSTREAM_REPO": {
+        "description": "If you dont know this, Leave as it is",
+        "value": "https://github.com/RishBropromax/Cat-X-Girl-Music",
+        "required": true
+      },
+      "UPSTREAM_BRANCH": {
+        "description": "Upstream Repo's Branch Name",
+        "value": "master",
+        "required": true
+      }
     },
-    "BOT_TOKEN": {
-      "description": "Get this value from @BotFather on TG",
-      "required": true,
-    },
-    "BOT_NAME": {
-      "description": "A name for your MusicPlayer Bot",
-      "required": false,
-      
-    },
-    "BOT_USERNAME": {
-      "description": "Username of your bot without @",
-      "required": false,
-      "value": ""
-    },
-    "API_ID": {
-      "description": "Get this value from my.telegram.org/apps",
-      "required": false,
-    },
-    "API_HASH": {
-      "description": "Get this value from from my.telegram.org/apps",
-      "required": false,
-    },
-    "OWNER_USERNAME": {
-      "description": "Username of the person who will known as owner of the bot, without @",
-      "required": false,
-      "value": "ImRishmika"
-    },
-    "SUPPORT_GROUP": {
-      "description": "Username of the group where users will go and disturb you, without @",
-      "required": false,
-      "value": "CatXGilrSupport"
-    },
-    "SUDO_USERS": {
-      "description": "User IDs of the users who will counted as admin everywhere (if more than one separate them by space).",
-      "required": true,
-      "value": "1356469075"
-    },
-    "START_IMG": {
-      "description": "Telegraph link of the pic which you want to set as the start pic of your bot",
-      "required": false,
-    },
-    "PING_IMG": {
-      "description": "Telegraph link of the pic which you want to set as the ping pic of your bot",
-      "required": false,
-    },
-    "PMPERMIT": {
-      "description": "If you want to notify users who pm to assistant account that it's the assistant account of your bot so don't spam messages there (ENABLE/DISABLE).",
-      "required": false,
-      "value": "ENABLE"
-    },
-    "DURATION_LIMIT": {
-      "description": "Max audio duration limit for downloads (minutes).",
-      "required": false,
-      "value": "120"
-    },
-    "GIRL_OR_BOY": {
-      "description": "Girl Or Boy",
-      "required": false,
-      "value": "Boy"
-    },
-    "OWER_USERNAME":{
-      "description": "Ower Username Without @"
-      "required": false,
-      "value": "@ImRishmika"
-    },
-    "ASSISTANT_USERNAME":{
-      "description": "Assistant Username",
-      "required": false,
-      "value": "@CatXGirl_Assistant"
-    },
-    "UPDATE_CHANNEL":{
-      "description": "Updateds Channel Id Or Username (t.me/CatXGirlNews)",
-      "required": false,
-      "value": "@atXGirlNews"
-    },
-    "VIDEO_PLAYING":{
-      "description": "Yes or No ( If you say yes, the dyons in your heroku account will expire in 5 days or less. If you say no, you can keep this bot from heroku dyons for 20 to 25 days. ) ",
-      "required": false,
-      "value": "No"
+    "buildpacks": [
+          {
+              "url": "heroku/python"
+          },
+          {
+              "url": "heroku/nodejs"
+          },
+          {
+              "url": "https://github.com/jonathanong/heroku-buildpack-ffmpeg-latest.git"
+          }
+      ],
+      "formation": {
+          "worker": {
+              "quantity": 1,
+              "size": "free"
+          }
+      }
   }
- }
-}
-
-  
